# dumbnotes

./: .gitignore  .gitmodules  Cargo.toml  build.rs  cargow.fish  mock_keys_config.toml  run_tests.fish
.cargo/: config.toml
access-token/: Cargo.toml
access-token-data/: Cargo.toml
access-token-data/src/: lib.rs
access-token/src/: access_token_generator.rs  data.rs  decoder.rs  lib.rs  validator.rs
api-data/: Cargo.toml
api-data/src/: lib.rs  model.rs  protobuf.rs
api-data/src/protobuf/: login.rs  note.rs  note_metadata.rs  users_notes.rs
auth-ipc-data/: Cargo.toml  build.rs
auth-ipc-data/src/: lib.rs
auth-ipc-data/src/model/: login.rs  logout.rs  refresh_token.rs  session_kind.rs  successful_login.rs
data/: Cargo.toml
data/src/: lib.rs  username_string.rs
dumbnotes/: Cargo.toml
dumbnotes-gen/: Cargo.toml
dumbnotes-gen/src/: cli.rs  file_write.rs  main.rs  pepper_generator.rs
dumbnotes-gen/tests/: dumbnotes_gen.rs
dumbnotes/src/: access_token.rs  bin_constants.rs  config.rs  hasher.rs  ipc.rs  lib.rs  lib_constants.rs  logging.rs  protobuf.rs  rng.rs  sandbox.rs  serde.rs  username_string.rs
dumbnotes/src/access_token/: data.rs  decoder.rs  validator.rs
dumbnotes/src/access_token/decoder/: errors.rs
dumbnotes/src/config/: app_config.rs  read.rs
dumbnotes/src/config/app_config/: data.rs
dumbnotes/src/ipc/: auth.rs  caller.rs  data.rs  eventloop.rs  exec.rs  launch_event_loops.rs  macros.rs  message_stream.rs  socket.rs
dumbnotes/src/ipc/auth/: caller.rs  message_stream.rs  model.rs
dumbnotes/src/ipc/auth/model/: logout.rs  refresh_token.rs  successful_login.rs
dumbnotes/src/rng/: testing.rs
dumbnotes/src/sandbox/: daemonize.rs  pledge.rs  unveil.rs  user_group.rs
dumbnotes/src/storage/: errors.rs  internal.rs
dumbnotes/src/storage/internal/: io_trait.rs
dumbnotesd/: Cargo.toml  build.rs
dumbnotesd-api/: Cargo.toml
dumbnotesd-api/src/: access_granter.rs  app_constants.rs  app_setup.rs  cli.rs  lib.rs  main.rs  routes.rs
dumbnotesd-api/src/access_granter/: model.rs
dumbnotesd-api/src/routes/: authentication_guard.rs
dumbnotesd-auth/: Cargo.toml
dumbnotesd-auth-data/: Cargo.toml
dumbnotesd-auth-data/src/: lib.rs  serde.rs  session_storage.rs  user_db.rs
dumbnotesd-auth-data/src/serde/: base64_vec.rs  password_hash.rs
dumbnotesd-auth/src/: access_token_generator.rs  app_constants.rs  cli.rs  eventloop.rs  main.rs  processors.rs  session_storage.rs
dumbnotesd-auth/src/access_token_generator/: errors.rs
dumbnotesd-auth/src/file_watcher/: errors.rs
dumbnotesd-auth/src/processors/: login.rs  logout.rs  refresh_token.rs
dumbnotesd-auth/src/session_storage/: errors.rs  internal.rs
dumbnotesd-auth/src/session_storage/internal/: data.rs  io_trait.rs  session.rs
dumbnotesd-auth/src/user_db/: errors.rs  internal.rs
dumbnotesd-auth/src/user_db/internal/: io_trait.rs
dumbnotesd-storage/: Cargo.toml
dumbnotesd-storage/src/: app_constants.rs  cli.rs  eventloop.rs  main.rs  processors.rs  storage.rs
dumbnotesd-storage/src/processors/: delete_note.rs  get_note_details.rs  list_notes.rs  read_note.rs  write_note.rs
dumbnotesd-storage/src/storage/: errors.rs  io_trait.rs
dumbnotesd-web/: Cargo.toml
dumbnotesd-web-css/: Cargo.toml  build.rs  dumbnotesd-web.css  package-lock.json  pnpm-lock.yaml
dumbnotesd-web-css/src/: lib.rs
dumbnotesd-web/src/: app_constants.rs  app_setup.rs  main.rs  routes.rs
dumbnotesd-web/src/routes/: language.rs  static_content.rs  translator.rs
dumbnotesd-web/templates/: login.html
dumbnotesd/locales/: web.yml
dumbnotesd/src/: access_granter.rs  app_constants.rs  app_setup.rs  cli.rs  exec_path.rs  execute.rs  kill_with_timeout.rs  launch_sub.rs  lib.rs  main.rs  routes.rs  storage_accessor.rs
dumbnotesd/src/access_granter/: errors.rs  model.rs
dumbnotesd/src/routes/: api.rs  web.rs
dumbnotesd/src/routes/api/: protobuf.rs
dumbnotesd/src/routes/api/protobuf/: note.rs  users_notes.rs
dumbnotesd/src/routes/web/: language.rs
dumbnotesd/src/storage_accessor/: errors.rs
dumbnotesd/tests/: basic_api.rs  login.rs  successful_launch.rs
dumbnotesd/tests/common/: mod.rs
protobuf/: api_v1.proto  auth_ipc.proto  build.rs  storage_ipc.proto
protobuf-common/: Cargo.toml
protobuf-common/src/: lib.rs
rocket-execute/: Cargo.toml
rocket-execute/src/: lib.rs
scripts/: build_css.fish  run_test_env.fish  run_tests.fish  run_with_faketime.fish
src/: access_token.rs  app_constants.rs  bin_constants.rs  cli.rs  config.rs  data.rs  hasher.rs  hmac_key_generator.rs  lib.rs  lib_constants.rs  logging.rs  main.rs  nix.rs  pledge.rs  protobuf.rs  rng.rs  sandbox.rs  serde.rs  session_storage.rs  storage.rs  test.rs  user_db.rs  username_string.rs  util.rs
src/access_token/: data.rs  decoder.rs  generator.rs
src/access_token/decoder/: errors.rs
src/config/: app_config.rs  figment.rs  hasher_config.rs
src/file_watcher/: internal.rs
src/ipc/: auth.rs  exec.rs  socket.rs
src/ipc/auth/: caller.rs  (+1 more)
src/rng/: testing.rs
src/sandbox/: daemonize.rs  pledge.rs  umask.rs  unveil.rs  user_group.rs
src/serde/: base64_vec.rs  base64vec.rs  password_hash_string.rs
src/session_storage/: internal.rs
src/storage/: errors.rs  internal.rs
src/user_db/: errors.rs  internal.rs
storage-ipc-data/: Cargo.toml  build.rs
storage-ipc-data/src/: lib.rs
storage-ipc-data/src/model/: delete_note.rs  get_note_details.rs  list_notes.rs  note.rs  note_info.rs  note_metadata.rs  read_note.rs  write_note.rs
storage-ipc-sdk/: Cargo.toml
storage-ipc-sdk/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: background_reader.rs  build_bin.rs  constants.rs  data.rs  faketime.rs  kill_on_drop.rs  lib.rs  mock.rs  mock_hierarchy.rs  mock_jwt_private_key.json  mock_jwt_public_key.json  mock_pepper.b64  mock_user_db.toml  ports.rs  predicates.rs  pty_session.rs  reqwest.rs
test-utils/src/predicates/: file_mode.rs  mode_octal_format_wrapper.rs
tests/: dumbnotes_gen.rs
unix/: Cargo.toml
unix/src/: constants.rs  errors.rs  lib.rs
util/: Cargo.toml
util/src/: lib.rs
(+16 files in other folders)
