[package]
name = "dumbnotes"
version = "0.1.0"
edition = "2024"

# TODO: per-bin-crate deps
[dependencies]
argon2 = "0.6.0-rc.1" # using rc to get rid of the old rand_core 0.6.x dep
async-stream = "0.3.6"
async-trait = "0.1.89"
base64ct = { version = "1.8.0", features = ["alloc", "std"] }
boolean-enums = "0.4.0"
clap = { version = "4.5.48", features = ["cargo", "derive"] }
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
josekit = { version = "0.10.3", features = ["vendored"] }
libc = "0.2.176"
log = { version = "0.4.28", features = ["max_level_debug", "release_max_level_info"] }
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
prost = "0.14.1"
rand = { version = "0.9.2", features = ["thread_rng", "std_rng", "os_rng"] }
rocket = { version = "0.5.1", features = ["uuid"], default-features = false }
rpassword = "7.4.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
socket2 = { version = "0.6.1", features = ["all"] }
syslog = "7.0.0"
thiserror = "2.0.17"
time = { version = "0.3.43", features = ["std", "alloc", "formatting", "serde-human-readable"] }
tokio = { version = "1.47.1", features = ["fs", "io-util", "process", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.9.7"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
lazy_static = "1.5.0"

[build-dependencies]
prost-build = "0.14.1"
