[workspace]
resolver = "3"
members = [
  "api-data",
  "auth-ipc-data",
  "protobuf-common",
  "data",
  "dumbnotes",
  "dumbnotesd",
  "dumbnotesd-auth",
  "dumbnotes-gen",
  "test-utils",
  "unix",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
argon2 = "0.6.0-rc.1" # using rc to get rid of the old rand_core 0.6.x dep
async-stream = "0.3.6"
async-trait = "0.1.89"
base64ct = { version = "1.8.0", features = ["alloc", "std"] }
bitflags = "2.10.0"
boolean-enums = "0.4.1"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
libc = "0.2.177"
log = { version = "0.4.28", features = ["max_level_debug", "release_max_level_info"] }
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
prost = "0.14.1"
rand = { version = "0.9.2", features = ["thread_rng", "std_rng", "os_rng"] }
rocket = { version = "0.5.1", features = ["uuid"], default-features = false }
rpassword = "7.4.0"
scc = "3.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
socket2 = { version = "0.6.1", features = ["all"] }
syslog = "7.0.0"
tap = "1.0.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["std", "alloc", "formatting", "serde-human-readable"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "net", "process", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
which = "8.0.0"
josekit = "0.10.3"
assert_fs = "1.1.3"
predicates = "3.1.3"
prost-build = "0.14.1"
cargo_metadata = "0.23.1"
rexpect = "0.6.2"
reqwest = { version = "0.13.1", features = ["blocking", "charset", "native-tls"], default-features = false }

[patch.crates-io]
josekit = { git = "https://github.com/domisafonov/josekit-rs.git", branch = "libressl" }
rexpect = { git = "https://github.com/domisafonov/rexpect.git", branch = "openbsd" }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(integration_test)'] }

[profile.release]
overflow-checks = true
lto = "fat"
panic = "abort"

[profile.integration-test]
inherits = "test"
debug-assertions = false
