[workspace]
resolver = "3"
members = [
  "api-data",
  "auth-ipc-data",
  "protobuf-common",
  "data",
  "dumbnotes",
  "dumbnotesd",
  "dumbnotesd-auth",
  "dumbnotesd-auth-data",
  "dumbnotes-gen",
  "test-utils",
  "unix",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
argon2 = "0.6.0-rc.7" # using rc to get rid of the old rand_core 0.6.x dep
async-stream = "0.3.6"
async-trait = "0.1.89"
base64ct = { version = "1.8.3", features = ["alloc", "std"] }
bitflags = "2.11.0"
boolean-enums = "0.4.1"
clap = { version = "4.6.0", features = ["cargo", "derive"] }
env_logger = "0.11.9"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.32"
libc = "0.2.183"
log = { version = "0.4.29", features = ["max_level_debug", "release_max_level_info"] }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
prost = "0.14.3"
rand = { version = "0.10.0", features = ["thread_rng", "std_rng", "sys_rng"] }
rocket = { version = "0.5.1", features = ["uuid"], default-features = false }
rpassword = "7.4.0"
scc = "3.6.9"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = { version = "0.6.3", features = ["all"] }
syslog = "7.0.0"
tap = "1.0.1"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["std", "alloc", "formatting", "serde-human-readable"] }
tokio = { version = "1.50.0", features = ["fs", "io-util", "net", "process", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
toml = "1.0.6"
uuid = { version = "1.22.0", features = ["v4", "fast-rng", "serde"] }
which = "8.0.2"
josekit = "0.10.3"
assert_fs = "1.1.3"
predicates = "3.1.4"
prost-build = "0.14.3"
cargo_metadata = "0.23.1"
rexpect = "0.6.3"
reqwest = { version = "0.13.2", features = ["blocking", "charset", "native-tls"], default-features = false }

[patch.crates-io]
josekit = { git = "https://github.com/domisafonov/josekit-rs.git", branch = "libressl" }
rexpect = { git = "https://github.com/domisafonov/rexpect.git", branch = "openbsd" }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(integration_test)'] }

[profile.release]
overflow-checks = true
lto = "fat"
panic = "abort"

[profile.integration-test]
inherits = "test"
debug-assertions = false
