[package]
name = "access-token"
version.workspace = true
edition.workspace = true

[dependencies]
access-token-data.path = "../access-token-data"
data.path = "../data"
josekit.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[lints]
workspace = true
