[package]
name = "dumbnotes-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
base64ct.workspace = true
clap.workspace = true
dumbnotes.path = "../dumbnotes"
figment.workspace = true
josekit.workspace = true
libc.workspace = true
log.workspace = true
rand.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unix.path = "../unix"

[dev-dependencies]
argon2.workspace = true
assert_fs.workspace = true
boolean-enums.workspace = true
predicates.workspace = true
rexpect.workspace = true
test-utils.path = "../test-utils"
