[package]
name = "dumbnotes"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64ct.workspace = true
bitflags.workspace = true
boolean-enums.workspace = true
env_logger.workspace = true
figment.workspace = true
futures.workspace = true
libc.workspace = true
log.workspace = true
prost.workspace = true
rand.workspace = true
scc.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
syslog.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
uuid.workspace = true
which.workspace = true
josekit.workspace = true

[build-dependencies]
prost-build.workspace = true
