[package]
name = "dumbnotes"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
async-stream.workspace = true
async-trait.workspace = true
auth-ipc-data.path = "../auth-ipc-data"
base64ct.workspace = true
bitflags.workspace = true
boolean-enums.workspace = true
data.path = "../data"
env_logger.workspace = true
figment.workspace = true
futures.workspace = true
josekit.workspace = true
libc.workspace = true
log.workspace = true
prost.workspace = true
protobuf-common.path = "../protobuf-common"
rand.workspace = true
scc.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
syslog.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
unix.path = "../unix"
uuid.workspace = true
which.workspace = true

[lints]
workspace = true
