[package]
name = "dumbnotesd-auth"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
async-stream.workspace = true
async-trait.workspace = true
boolean-enums.workspace = true
clap.workspace = true
dumbnotes.path = "../dumbnotes"
futures.workspace = true
josekit.workspace = true
log.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
prost.workspace = true
rand.workspace = true
scc.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
unix.path = "../unix"
uuid.workspace = true

[lints]
workspace = true
