[package]
name = "dumbnotesd-auth"
version.workspace = true
edition.workspace = true

[dependencies]
access-token.path = "../access-token"
argon2.workspace = true
async-stream.workspace = true
async-trait.workspace = true
auth-ipc-data.path = "../auth-ipc-data"
boolean-enums.workspace = true
clap.workspace = true
data.path = "../data"
dumbnotes.path = "../dumbnotes"
dumbnotesd-auth-data.path = "../dumbnotesd-auth-data"
futures.workspace = true
josekit.workspace = true
kinded.workspace = true
log.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
prost.workspace = true
protobuf-common.path = "../protobuf-common"
rand.workspace = true
scc.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
storage-ipc-data.path = "../storage-ipc-data"
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
unix.path = "../unix"
util.path = "../util"
uuid.workspace = true

[lints]
workspace = true
