[package]
name = "dumbnotesd"
version.workspace = true
edition.workspace = true

[dependencies]
api-data.path = "../api-data"
async-trait.workspace = true
auth-ipc-data.path = "../auth-ipc-data"
boolean-enums.workspace = true
clap.workspace = true
data.path = "../data"
dumbnotes.path = "../dumbnotes"
figment.workspace = true
futures.workspace = true
josekit.workspace = true
log.workspace = true
protobuf-common.path = "../protobuf-common"
rocket.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
unix.path = "../unix"
uuid.workspace = true

[dev-dependencies]
assert_fs.workspace = true
prost.workspace = true
reqwest.workspace = true
rexpect.workspace = true
test-utils.path = "../test-utils"

[lints]
workspace = true
