[package]
name = "dumbnotesd"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
boolean-enums.workspace = true
clap.workspace = true
data.path = "../data"
dumbnotes.path = "../dumbnotes"
figment.workspace = true
futures.workspace = true
log.workspace = true
serde_json.workspace = true
socket2.workspace = true
tap.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
unix.path = "../unix"
util.path = "../util"
uuid.workspace = true
which.workspace = true

[dev-dependencies]
access-token-data.path = "../access-token-data"
api-data.path = "../api-data"
assert_fs.workspace = true
cfg-or-panic.workspace = true
josekit.workspace = true
prost.workspace = true
reqwest.workspace = true
rexpect.workspace = true
tap.workspace = true
test-utils.path = "../test-utils"

[lints]
workspace = true
