[package]
name = "storage-ipc-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
data.path = "../data"
dumbnotes.path = "../dumbnotes"
log.workspace = true
prost.workspace = true
protobuf-common.path = "../protobuf-common"
rocket.workspace = true
storage-ipc-data.path = "../storage-ipc-data"
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
