[package]
name = "test-utils"
version.workspace = true
edition.workspace = true

[dependencies]
assert_fs.workspace = true
base64ct.workspace = true
cargo_metadata.workspace = true
josekit.workspace = true
predicates.workspace = true
prost.workspace = true
protobuf-common.path = "../protobuf-common"
reqwest.workspace = true
rexpect.workspace = true
thiserror.workspace = true
unix.path = "../unix"

[lints]
workspace = true
