[package]
name = "test-utils"
version.workspace = true
edition.workspace = true

[dependencies]
assert_fs.workspace = true
base64ct.workspace = true
boolean-enums.workspace = true
cargo_metadata.workspace = true
dumbnotesd-auth-data.path = "../dumbnotesd-auth-data"
josekit.workspace = true
predicates.workspace = true
prost.workspace = true
protobuf-common.path = "../protobuf-common"
reqwest.workspace = true
rexpect.workspace = true
tap.workspace = true
thiserror.workspace = true
toml.workspace = true
unix.path = "../unix"

[lints]
workspace = true
